--- a/flaskApp/static/main.css
+++ b/flaskApp/static/main.css
@@ -10,3 +10,41 @@ body {
     background-color: #1c1c1cff;
     color: #fffffc; 
   }
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  text-decoration: none;
+  color: #fffffc;
+  font-size: 18px;
+}
+
+.nav-buttons {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.nav-buttons li {
+  margin-left: 10px;
+  border-left: 1px solid #ef233cff;
+}
+
+.nav-buttons li:first-child {
+  margin-left: 0;
+  border-left: none;
+}
+
+.nav-buttons a {
+  text-decoration: none;
+  color: #fffffc;
+  font-size: 14px;
+  display: block;
+  padding: 10px;
+}
+  
