--- a/flaskApp/templates/base.html
+++ b/flaskApp/templates/base.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel ="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-    <title>{% block title %}{% endblock %}</title>
+    {% if title %}
+        <title>Flask Blog - {{ title }}</title>
+    {% else %}
+        <title> Flask Blog </title>
+    {% endif %}
 </head>
 <body>
+    <nav>
+        <a href="#" class="logo">Ovation</a>
+        <ul class="nav-buttons">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Posts</a></li>
+        </ul>
+    </nav>
     {% block content %}{% endblock %}
 </body>
 </html>
