--- a/flaskApp/templates/base.html
+++ b/flaskApp/templates/base.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel ="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     {% if title %}
@@ -12,13 +15,10 @@
     {% endif %}
 </head>
 <body>
-    <nav>
-        <a href="#" class="logo">Ovation</a>
-        <ul class="nav-buttons">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Posts</a></li>
-        </ul>
-    </nav>
+    <div class="topnav">
+        <a href="#">About</a>
+        <a href="#">Posts</a>
+    </div>
     {% block content %}{% endblock %}
 </body>
 </html>
