Added login and create account functionality

--- a/flaskApp/templates/register.html
+++ b/flaskApp/templates/register.html
@@ -7,15 +7,45 @@
                 <legend>Join Now</legend>
                 <div>
                     {{ form.username.label }}
-                    {{ form.username }}
+
+                    {% if form.username.errors %}
+                        {{ form.username }}
+                        <div class="error">
+                            {% for error in form.username.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.username }}
+                    {% endif %}
                 </div>
                 <div>
                     {{ form.password.label }}
-                    {{ form.password }}
+
+                    {% if form.password.errors %}
+                        {{ form.password }}
+                        <div class="error">
+                            {% for error in form.password.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.password }}
+                    {% endif %}
                 </div>
                 <div>
                     {{ form.confirm_password.label }}
-                    {{ form.confirm_password }}
+
+                    {% if form.confirm_password.errors %}
+                        {{ form.confirm_password }}
+                        <div class="error">
+                            {% for error in form.confirm_password.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.confirm_password }}
+                    {% endif %}
                 </div>
             </fieldset>
             <div>
