--- a/flaskApp/static/main.css
+++ b/flaskApp/static/main.css
@@ -39,3 +39,15 @@ body {
   background-color: #ef233cff;
   color: #1c1c1cff;
 }
+
+.alert {
+  color: #ef233cff;
+  background-color: #282828;
+  width: fit-content;
+  padding: 10px;
+  border-radius: 25px;
+}
+
+a {
+  color: #ef233cff;
+}
