--- a/flaskApp/templates/about.html
+++ b/flaskApp/templates/about.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>About Page</h1>
+    <p> This is ovation :D</p>
 <!-- Not strictly necessary to define which enblock but good for clarity-->
 {% endblock content %}
