--- a/flaskApp/templates/base.html
+++ b/flaskApp/templates/base.html
@@ -16,9 +16,19 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="#">About</a>
-        <a href="#">Posts</a>
+        <a href="{{ url_for('about') }}">About</a>
+        <a href="{{ url_for('posts') }}">Posts</a>
+        <a href="{{ url_for('login') }}">Login</a>
     </div>
+    {% with messages = get_flashed_messages()%}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     {% block content %}{% endblock %}
 </body>
 </html>
